welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Boolean = false;
	for (k<- 0 to 6){
		avance();
		if (vuBiscuit){
			return true;
		}else{
			return false;
		}
	}
	
}


